# void-claw

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  agent-zero.example.toml  claw-rules.toml  codex.json  demo.webm  harness-hat.example.toml  harness-rules.toml  src-files-dump.md  todo.md  void-claw-rules.toml  void-claw.example.toml  void-rules.toml  zero-rules.toml
docker/: default.dockerfile  harness-hat-base.dockerfile  ubuntu-24.04.Dockerfile  void-claw-base.dockerfile
docker/claude/: ubuntu-24.04.Dockerfile
docker/codex/: ubuntu-24.04.Dockerfile
docker/gemini/: ubuntu-24.04.Dockerfile
docker/opencode/: ubuntu-24.04.Dockerfile
docker/scripts/: harness-hat-hostdo-8VP3so  hostdo.py  killme.py
pwa/: .gitignore  index.html  package-lock.json  package.json  panda.config.ts
pwa/public/: manifest.webmanifest  sw.js
pwa/src/: App.tsx  index.tsx  register-service-worker.ts
scripts/: code_export.mjs
src/: activity.rs  agents.rs  ca.rs  cli.rs  config.rs  container.rs  exec.rs  init.rs  lib.rs  main.rs  manager.rs  new_project.rs  passthrough.rs  proxy.rs  rules.rs  server.rs  shared_config.rs  state.rs  sync.rs  telemetry.rs
src/config/: core.rs  load.rs  mod.rs  schema.rs  tests.rs
src/container/: core.rs  helpers.rs  mod.rs  spawn.rs
src/proxy/: connect.rs  core.rs  helpers.rs  http.rs  mod.rs  tests.rs
src/rules/: core.rs  mod.rs  tests.rs
src/server/: core.rs  handlers.rs  mod.rs
src/sync/: core.rs  helpers.rs  mod.rs
src/tui/: app.rs  mod.rs  render.rs  tests.rs  ui.rs
src/tui/app/: approvals.rs  build.rs  core.rs  helpers.rs  input.rs  launch.rs  runtime.rs  settings.rs
src/tui/render/: overlays.rs  root.rs  sidebar.rs  terminal.rs
src/tui/render/panes/: build.rs  text.rs
